# airflow-v2

./: Dockerfile  README.md  pyproject.toml
dags/: external_task_sensor_example.py  hello_world.py
docs/: external_task_sensor.md  external_task_sensor_simple.md  operators_overview.md  sensors_overview.md
